# challs

FlareOn2017/chall6/: CMakeLists.txt  README.md
FlareOn2017/chall6/basic_ldr/: CMakeLists.txt  main.cpp
FlareOn2017/chall6/peconv_autofill_ldr/: CMakeLists.txt  main.cpp
FlareOn2017/chall6/peconv_basic_ldr/: CMakeLists.txt  main.cpp
FlareOn2017/chall6/peconv_basic_sol/: CMakeLists.txt  main.cpp
FlareOn2017/chall6/peconv_finished_sol/: CMakeLists.txt  main.cpp
FlareOn2017/chall6/peconv_hooked_msgbox_sol/: CMakeLists.txt  main.cpp  run.bat
